fixed mobile logo and header spacing

--- a/wp-content/themes/solion/css/bootsnavf801.css
+++ b/wp-content/themes/solion/css/bootsnavf801.css
@@ -2359,7 +2359,7 @@ nav.navbar.bootsnav {
   }
 
   .navbar-brand > img {
-    height: 40px !important;
+    /* height: 40px !important; */
   }
 
   nav.navbar.bootsnav.navbar-transparent.pad-top {
